--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ html, body {
             width: 0;
       }
       to {
-            width: 18em;
+            width: 14em;
       }
 }
 
@@ -53,7 +53,7 @@ html, body {
                   width: 0;
             }
             to {
-                  width: 17em;
+                  width: 13em;
             }
       }
 }
@@ -299,13 +299,18 @@ h6 {
       height: 500px;
 }
 
+.project:hover {
+      cursor: pointer;
+}
+
 .project1 {
-      background: url(https://images.unsplash.com/photo-1540349220179-09d3866f2e74?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2600&q=80) no-repeat 50% 50%;
+      background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),url('./images/flappy.png') no-repeat 50% 50%;
       background-size: cover;
+      background-position: center left;
 }
 
 .project1::after {
-      content: "timeless flow.";
+      content: "a flappy clone.";
       font-family: "Roboto Mono";
       font-size: 36px;
       position: relative;
@@ -318,12 +323,12 @@ h6 {
 }
 
 .project2 {
-      background: url(https://images.unsplash.com/photo-1468870045442-e7d799d8c98a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2448&q=80) no-repeat 50% 50%;
+      background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),url('./images/chat-farm.png') no-repeat 50% 50%;
       background-size: cover;
 }
 
 .project2::after {
-      content: "foretime.";
+      content: "chat farm.";
       font-family: "Roboto Mono";
       font-size: 36px;
       position: relative;
@@ -336,12 +341,13 @@ h6 {
 }
 
 .project3 {
-      background: url(https://images.unsplash.com/photo-1482501157762-56897a411e05?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80) no-repeat 50% 50%;
+      background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),url('./images/snake-game.png') no-repeat 50% 50%;
       background-size: cover;
+      background-position: center left;
 }
 
 .project3::after {
-      content: "never again.";
+      content: "a snake game.";
       font-family: "Roboto Mono";
       font-size: 36px;
       position: relative;
@@ -473,6 +479,10 @@ h6 {
       display: inline-block;
 }
 
+#media ul li:hover {
+      cursor:pointer;
+}
+
 @media(max-width: 768px) {
       .collab, #personal, #media, #address {
             text-align: center;
@@ -516,7 +526,9 @@ h6 {
 }
 
 .image {
-      background: url(https://images.unsplash.com/photo-1540885762261-a2ca01f290f9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2468&q=80) no-repeat 50% 70%;
+      background: linear-gradient(0deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),url('./images/profile-pic.png') no-repeat 50% 70%;
+      background-size: cover;
+      background-position: 0 -50px; 
 }
 
 /*--------------- contact form --------------- */
